--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "polished": "^3.4.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.12.0",
     "react-grid-system": "^6.2.4",
     "react-icons": "^3.9.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
